# ReAct-Agent-demo

./: README.md  pyproject.toml
app/: trace_viewer.py
config/: config.yml
data/output/: trace.jsonl  trace.txt
docs/: TECH_REPORT.md
src/llm/: gemini.py
src/llm/providers/: kimi.py
src/react/: agent.py  tracer.py
src/tools/: basic.py
